--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-canvas {
-  background: lightgreen;
+ body{
+  height: 95vh;
+  width: 95vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color:white;
+  color: rgb(52, 165, 52);
 }
